--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -63,6 +63,8 @@
             padding-left: 6px;
         }
     }
+
+   
     /*.s-divider {
         width: 0px;
         display:inline-block;
@@ -103,4 +105,10 @@
     /*.full-height {
         height: 100%;
     }*/
+}
+.side-bar {
+    position: -webkit-sticky;
+    position: sticky;
+    max-height: 100vh;
+    top: 74px;
 }
