All kind of fixes.

--- a/Cloudents.Web/ClientApp/components/results/ResultFood.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultFood.less
@@ -2,6 +2,8 @@
 
 .place-cell {
     .imageWrapper(96px,120px);
+    width:100%;
+    text-align:left;
 
     .cell-title {
         font-size: 17px;
