--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -124,7 +124,9 @@ a:hover {
     outline: 0;
     text-decoration: none;
 }
-
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
+    background:none;
+}
 /*abbr[title] {
     border-bottom: 1px dotted;
 }
