--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -26,6 +26,8 @@
         //width: @cell-width;
         color: @Spitball-Text;
     }*/
+    min-width: 0;
+
     .chip {
         background: #fff;
         color: @Spitball-Main-color;
