--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -1,6 +1,34 @@
 ﻿@import "../../mixin.less";
 
-.sb-aside {
+.sb-menu {
+    /*.chip {
+        background: transparent;
+    }*/
+
+    .chip {
+        font-size: 14px;
+        background: #fff;
+        color: @Spitball-Main-color;
+        border: 1px solid @Spitball-Main-color;
+        border-radius: 10px;
+        letter-spacing: -0.3px;
+        text-transform: capitalize;
+        padding: 0 24px;
+        cursor: pointer;
+
+        &.chip--selected {
+            color: #fff;
+            border: 0;
+            background: @Spitball-Main-color;
+            pointer-events: none;
+        }
+
+        &.chip--disabled {
+            opacity: 0.5;
+        }
+    }
+}
+/*.sb-aside {
     &.navigation-drawer {
         background: #3293f6 !important; //override vuetify
         padding: 0;
@@ -29,12 +57,7 @@
     .list__tile.list__tile--link {
         height: 64px;
     }
-    /*.application .theme--light.navigation-drawer .subheader.subheader.sub {
-        font-size: 10px;
-        color: @Chat;
-        height: 25px;
-        text-transform: capitalize;
-    }*/
+    
     .vertical-cycle {
         border-radius: 50%;
         width: 46px;
@@ -92,56 +115,11 @@
             height: 22.2px;
         }
     }
-    /*.bg-upload {
-    svg {
-        width: 13.5px;
-        height: 16px;
-    }
-}
-.bg-post {
-    svg {
-        width: 14.3px;
-        height: 14.3px;
-    }
-}
-.bg-create {
-    svg {
-        width: 19.2px;
-        height: 15.6px;
-    }
-}
-.bg-chat {
-
-    svg {
-        width: 14.7px;
-        height: 12.7px;
-    }
-}
-.bg-chat {
-
-    svg {
-        width: 14.7px;
-        height: 12.7px;
-    }
-}
-.bg-course {
-
-    svg {
-        width: 16px;
-        height: 16px;
-    }
-}
-.bg-like {
-
-    svg {
-        width: 13.4px;
-        height: 16px;
-    }
-}*/
+   
     .bg-setting {
         svg {
             width: 23.9px;
             height: 24.2px;
         }
     }
-}
+}*/
