--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -11,6 +11,8 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        box-sizing:border-box;
+        margin-left:0 !important; //override
         //.inTheMiddle();
     }
 
