--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -4,6 +4,15 @@
     /*.chip {
         background: transparent;
     }*/
+    .tabs__bar {
+        background-color: transparent;
+
+        .tabs__li {
+            a {
+                color: #fff;
+            }
+        }
+    }
 
     .chip {
         font-size: 14px;
