--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -2,27 +2,34 @@
 
 .sb-menu {
     .tabs:not(.tabs--centered):not(.tabs--grow):not(.tabs--mobile) .tabs__wrapper--scrollable {
-        margin:0;
+        margin: 0;
     }
-    /*.chip {
-        background: transparent;
-    }*/
-    //max-width: 784px;
+
     .tabs:not(.tabs--grow):not(.tabs--mobile) .tabs__item {
-        padding:0 16px;
+        padding: 0 16px;
     }
+
     .tabs__bar {
-        height: 40px;
+        height: 36px;
         background-color: transparent;
+
         .tabs__li {
             a {
-                color: #fff;
+                height: 36px;
+               // display:inline-block;
+                //width:100%;
+                color: #fff !important;
                 font-size: 14px;
                 font-weight: 600;
                 letter-spacing: -0.3px;
-                padding: 0 16px;
+                padding: 0 16px ;
+              //  margin-bottom:8px;
             }
         }
+
+        /*.tabs__item--active {
+            border-bottom: 2px solid @Class-Material;
+        }*/
     }
 
     .vertical {
@@ -32,6 +39,5 @@
             text-transform: capitalize;
         }
     }
-    
 }
 
