--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -45,7 +45,19 @@
     /*background: @color-blue url("./img/doodels.png") no-repeat 50% 50%;*/
     background-image: linear-gradient(317deg, #3293f6, #3023ae);
     background-size: cover;
-    padding-bottom: 128px;
+    padding-bottom: 24px;
+
+    .logo-wrapper {
+        background: white;
+        padding: 12px 12px 10px 12px;
+        border-radius: 0 0 8px 8px;
+        margin-left: 36px;
+        .inTheMiddle();
+
+        .logo {
+            width: 128px;
+        }
+    }
 
     header {
         li {
@@ -60,15 +72,19 @@
         }
     }
 
+    > .container {
+        padding: 0;
+    }
+
     .box-inner-header {
         color: @color-white;
         text-align: center;
 
-        .title {
-            //font-family: @font-bold;
-            font-size: 30px !important;
-            line-height: normal !important;
-            margin: 113px 0 4px;
+        .box-title {
+            font-size: 50px;
+            line-height: normal;
+            margin: 113px 0 36px;
+            font-weight: bold;
         }
 
         .sub-title {
@@ -91,13 +107,14 @@
         height: 48px;
         font-size: 20px;
     }
+
     .placeholder-color(#5d5d5d);
 
     input[type="text"] {
         background: #fff;
         color: @color-blue;
         .rounded-all(4px);
-        padding: 0 20px 0;
+        padding: 0 38px 0;
         // width: calc(~'100% - 180px');
     }
 
@@ -136,12 +153,25 @@
         font-size: 27px;
         padding: 0;
         position: absolute;
-        right: 200px;
-        top: 34px;
+        right: 190px;
+        top: 20px;
         line-height: 48px;
 
         &:hover {
             cursor: pointer;
+        }
+    }
+
+    .search-icon {
+        flex-grow: 0;
+        flex-shrink: 0;
+        z-index: 1;
+        width: 0px;
+
+        svg {
+            height: 100%;
+            margin-left: 12px;
+            fill: rgba(0,0,0,0.3);
         }
     }
 }
@@ -151,7 +181,25 @@
     max-width: 800px;
 }
 
+.websites-section {
+    padding: 8px;
 
+    .logos {
+        padding: 16px 0 32px 0;
+    }
+
+    h2 {
+        font-size: 28px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+
+    .site img{
+        padding: 8px
+    }
+}
 
 .box-section {
     margin: 20px 0 0;
@@ -278,23 +326,37 @@
     }
 }
 
-.box-testimonials {
+.testimonials {
     background: @color-light-grey-2;
     padding: 34px 0;
     text-align: center;
 
-    p {
-        margin: 0;
-        padding: 0;
+    .carousel{
+        box-shadow: none;
     }
 
-    img {
-        margin: 56px 0 12px;
+    .testimonial-text {
+        font-size: 20px;
+        max-width: 720px;
+        padding: 0 0 40px 0;
     }
 
-    .author span {
-        color: @color-grey;
-        //font-family: @font-bold;
+    .author {
+        img {
+            margin-bottom: 16px;
+            width: 80px;
+            height: 80px;
+            border-radius: 100%
+        }
+
+        .name, .uni {
+            color: @color-grey;
+            font-size: 14px;
+        }
+
+        .uni {
+            font-weight: bold;
+        }
     }
 }
 
@@ -560,7 +622,6 @@ footer {
         }
     }
 }
-
 /*.animenu__toggle {
     background: transparent;
     display: none;
@@ -573,7 +634,6 @@ footer {
     &:hover {
     }
 }*/
-
 /*.animenu__toggle__bar {
     display: block;
     width: 20px;
@@ -604,9 +664,7 @@ footer {
         }
     }
 }*/
-
 // Clear some defaults
-
 @media screen and (max-width: 769px) {
     .box-header {
         padding-bottom: 44px;
@@ -642,16 +700,5 @@ footer {
                 font-size: 20px;
             }
         }
-    }
-}
-
-.logo-wrapper {
-    background: white;
-    padding: 12px 12px 10px 12px;
-    border-radius: 0 0 8px 8px;
-    .inTheMiddle();
-
-    .logo {
-        width: 128px;
     }
 }
