--- a/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
+++ b/Cloudents.Web/ClientApp/components/home/horizontalStrip.less
@@ -6,6 +6,15 @@
     margin: 0;
     max-width: 100%;
 
+    @media(max-width: 600px) {
+        padding-top: 34px;
+        padding-bottom: 20px;
+
+        &:first-child {
+            padding-top: 60px
+        }
+    }
+
 
     &:nth-child(2n+1) .strip-content {
         flex-direction: row-reverse;
@@ -13,6 +22,7 @@
 
     &.documents { // Study documents
         background-image: linear-gradient(to bottom, rgba(38,0,75,0.2), rgba(249,249,249,0.2));
+
 
         .icon-1 {
             top: 10%;
@@ -28,10 +38,32 @@
             bottom: 0;
             right: 6%;
         }
+
+        @media(max-width:600px) {
+            .strip-title svg {
+                width: 23px;
+            }
+
+            .icon-1 {
+                top: 10%;
+                left: 97%;
+            }
+
+            .icon-2 {
+                top: -7%;
+                right: 82%;
+            }
+
+            .icon-3 {
+                bottom: 6%;
+                right: 98%;
+            }
+        }
     }
 
     &.tutors { // Tutors
         background-image: linear-gradient(to bottom, rgba(249,249,249,0.2) 10%, rgba(82,171,21,0.2) 98%);
+
 
         .icon-1 {
             top: -5%;
@@ -47,10 +79,32 @@
             bottom: 7%;
             left: -9%;
         }
+
+        @media(max-width:600px) {
+            .strip-title svg {
+                width: 31px;
+            }
+
+            .icon-1 {
+                top: -5%;
+                right: -5%;
+            }
+
+            .icon-2 {
+                bottom: -12%;
+                right: -6%;
+            }
+
+            .icon-3 {
+                bottom: 40%;
+                left: -25%;
+            }
+        }
     }
 
     &.food-deals { // Food and Deals
         background-image: linear-gradient(to bottom, rgba(44,191,165,0.2), rgba(249,249,249,0.2));
+
 
         .icon-1 {
             top: -23%;
@@ -65,6 +119,27 @@
         .icon-3 {
             bottom: -19%;
             left: 5%;
+        }
+
+        @media(max-width:600px) {
+            .strip-title svg {
+                width: 33px;
+            }
+
+            .icon-1 {
+                top: 11%;
+                left: -16%;
+            }
+
+            .icon-2 {
+                bottom: 81%;
+                right: -8%;
+            }
+
+            .icon-3 {
+                bottom: 0%;
+                left: 97%;
+            }
         }
     }
 
@@ -85,6 +160,27 @@
             bottom: 12%;
             left: -20%;
         }
+
+        @media(max-width:600px) {
+            .strip-title svg {
+                width: 39px;
+            }
+
+            .icon-1 {
+                top: -2%;
+                right: -20%;
+            }
+
+            .icon-2 {
+                bottom: -1%;
+                right: -18%;
+            }
+
+            .icon-3 {
+                bottom: 32%;
+                left: -25%;
+            }
+        }
     }
 
     &.flashcards { // Flashcards
@@ -103,6 +199,27 @@
         .icon-3 {
             bottom: -17%;
             right: 53%;
+        }
+
+        @media(max-width:600px) {
+            .strip-title svg {
+                width: 37px;
+            }
+
+            .icon-1 {
+                top: 3%;
+                left: -20%;
+            }
+
+            .icon-2 {
+                top: 3%;
+                right: -18%;
+            }
+
+            .icon-3 {
+                bottom: 0%;
+                right: -19%;
+            }
         }
     }
 
@@ -123,6 +240,27 @@
             top: -12%;
             left: 16%;
         }
+
+        @media(max-width:600px) {
+            .strip-title svg {
+                width: 36px;
+            }
+
+            .icon-1 {
+                bottom: -7%;
+                right: -20%;
+            }
+
+            .icon-2 {
+                top: 8%;
+                right: 91%;
+            }
+
+            .icon-3 {
+                top: 6%;
+                left: 103%;
+            }
+        }
     }
 
     &.jobs { // Jobs
@@ -142,45 +280,88 @@
             bottom: -18%;
             left: 8%;
         }
+
+        @media(max-width:600px) {
+            .strip-title svg {
+                width: 18px;
+            }
+
+            .icon-1 {
+                top: -5%;
+                left: 88%;
+            }
+
+            .icon-2 {
+                bottom: -7%;
+                right: -10%;
+            }
+
+            .icon-3 {
+                bottom: 36%;
+                left: -27%;
+            }
+        }
     }
 
     .image-wrapper, .description {
         flex-grow: 0;
+
+        @media(max-width:600px) {
+            flex-basis: 100%;
+            max-width: 100%;
+        }
     }
 
     .image-wrapper {
+        width: 433px;
+
+        @media(max-width:600px) {
+            max-width: 219px;
+        }
+
         .images {
             position: relative;
         }
 
         img {
-            width: 433px;
+            width: 100%;
         }
 
         .floating-icons svg {
             position: absolute;
-            /*&:nth-child(1) {
-                top: 36px;
-                left: -24px;
-            }
 
-            &:nth-child(2) {
-                top: -24px;
-                right: 72px;
+            @media(max-width: 600px) {
+                width: 20%;
+                height: 20%;
             }
-
-            &:nth-child(3) {
-                bottom: 0;
-                right: 24px;
-            }*/
         }
     }
 
     .description {
+        padding: 24px 24px;
+
+        @media(max-width: 600px) {
+            padding: 8px 0;
+        }
+
         .strip-title {
+
+            @media(max-width: 600px) {
+                justify-content: center;
+            }
+
+            svg {
+                height: auto;
+            }
+
             h3 {
                 font-size: 30px;
                 margin: 0 0 0 16px;
+
+                @media(max-width: 600px) {
+                    font-size: 20px;
+                    margin-left: 12px;
+                }
             }
         }
 
@@ -189,6 +370,12 @@
             color: #4a4a4a;
             margin: 16px 0 0 0;
             max-width: 450px;
+
+            @media(max-width: 600px) {
+                font-size: 16px;
+                text-align: center;
+                margin: 0;
+            }
         }
     }
 }
