Some header fixes.

--- a/Cloudents.Web/ClientApp/components/header/header.less
+++ b/Cloudents.Web/ClientApp/components/header/header.less
@@ -25,6 +25,9 @@
         height: 32px;
         // .inTheMiddle();
     }
+    form {
+        width:100%;
+    }
 
     .search-b{
         max-width:784px;
