--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -47,8 +47,6 @@
     }
 
     .sub-search {
-     
-
         overflow: auto;
         white-space: nowrap;
 
@@ -65,5 +63,10 @@
 
     .full-height {
         height: 100%;
+    }
+
+    .img-wrap .defaultImage svg {
+        width: 48px;
+        height: auto;
     }
 }
