--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -34,10 +34,10 @@ p {
     .flexSameSize();
 }
 
-.imageWrapper(118px,160px);
+.imageWrapper(118px,160px,39px);
 
 @media only screen and (max-device-width : 600px) {
-    .imageWrapper(88px,120px);
+    .imageWrapper(88px,120px, 32);
 }
 
 .img-wrap {
