--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -65,8 +65,8 @@
         height: 100%;
     }
 
-    .img-wrap .defaultImage svg {
+    /*.img-wrap .defaultImage svg {
         width: 48px;
         height: auto;
-    }
+    }*/
 }
