--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -94,17 +94,21 @@
     text-overflow: ellipsis;
 }
 
-.imageWrapper(@width,@height,@svgSize:48px) {
+.imageWrapper(@width,@height,@svgSize: 100%) {
     .img-wrap {
         width: @width;
         height: @height;
-            .inTheMiddle();
+        .inTheMiddle();
 
 
-        > img,.defaultImage {
-            width: @svgSize;
-            height: auto;
+        > img, .defaultImage {
+            width: 100%;
+            height: 100%;
             object-fit: cover;
+        }
+
+        svg.defaultImage {
+            height: @svgSize;
         }
     }
 }
