more functionality for new setttings UI

--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -9,6 +9,7 @@
     //padding : 8px;
 
     .d-header {
+        background-image: linear-gradient(328deg, #3293f6, #3023ae);
         position: -webkit-sticky;
         position: sticky;
         top: 0px;
