--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -76,6 +76,32 @@
     }
 }
 
+.sort-filter {
+    h3 {
+        font-size: 16px;
+        color: @color-blue;
+        font-weight: bold;
+    }
+
+    .expansion-panel {
+        box-shadow: none;
+
+        .expansion-panel__container {
+            background-color: transparent;
+
+            .expansion-panel__header {
+                padding: 8px 4px;
+                font-weight: bold;
+                border-top: 2px solid;
+                border-bottom: 2px solid;
+                border-image: linear-gradient(to right, #3023ae, #3293f6) 10;
+                text-transform: capitalize;
+                margin-bottom: 5px;
+            }
+        }
+    }
+}
+
 .side-bar {
     position: -webkit-sticky;
     position: sticky;
