--- a/Cloudents.Web/ClientApp/components/home/home.less
+++ b/Cloudents.Web/ClientApp/components/home/home.less
@@ -13,9 +13,9 @@
     }
 }
 
-.mic {
+/*.mic {
     .flexSameSize();
-}
+}*/
 
 .f-submit {
     .flexSameSize();
@@ -147,7 +147,7 @@
         .rounded-all(4px);
     }
 
-    .demo-icon-mic {
+    /*.demo-icon-mic {
         background: transparent;
         border: none;
         color: @color-blue;
@@ -161,9 +161,9 @@
         &:hover {
             cursor: pointer;
         }
-    }
+    }*/
 
-    .search-icon {
+    /*.search-icon {
         flex-grow: 0;
         flex-shrink: 0;
         z-index: 1;
@@ -174,7 +174,7 @@
             margin-left: 12px;
             fill: rgba(0,0,0,0.3);
         }
-    }
+    }*/
 }
 
 .box-small-container {
