fix issue with dialog change term and header issue

--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -1,5 +1,5 @@
 ﻿@import "../../mixin.less";
-.dialog__content.dialog__content__active{
+.settings.dialog__content.dialog__content__active{
     background-image: linear-gradient(328deg, #3293f6, #3023ae);
 }
 .dialog-choose {
