--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -8,6 +8,19 @@
     .first-grid {
         width: 230px;
         .flexSameSize();
+        padding: 0 35px;
+    }
+
+    .filters-section {
+        padding-top: 75px;
+    }
+
+    .results-section {
+        max-width: 100%;
+    }
+
+    .navbar-wrapper {
+        padding-bottom: 36px;
     }
 }
 
@@ -81,6 +94,8 @@
         font-size: 16px;
         color: @color-blue;
         font-weight: bold;
+        margin-bottom: 8px;
+        line-height: normal;
     }
 
     .expansion-panel {
