--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
     <base href="~/" />
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
+    @*<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">*@
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     <environment exclude="Development">
         <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />
