design implementation of results page - to be continued...

--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -10,7 +10,7 @@
     }
 
     .tabs__bar {
-        @tabsHeight: 60px;
+        @tabsHeight: 52px;
         height: @tabsHeight;
         background-color: transparent;
 
@@ -25,13 +25,15 @@
                 //width:100%;
                 color: #fff !important;
                 font-size: 14px;
-                font-weight: 600;
                 letter-spacing: -0.3px;
                 padding: 0 16px;
                 //  margin-bottom:8px;
             }
         }
 
+        .tabs__slider {
+            border-top: 3px solid;
+        }
         /*.tabs__item--active {
             border-bottom: 2px solid @Class-Material;
         }*/
