--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -13,6 +13,10 @@ body {
     //margin: 0;
     background-color: @Site-Background;
 }
+.application {
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1;
+}
 
 input[type="text"]:focus {
     outline: none;
