--- a/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
+++ b/Cloudents.Web/ClientApp/components/navbar/TheNavbar.less
@@ -27,12 +27,14 @@
                 font-size: 14px;
                 letter-spacing: -0.3px;
                 padding: 0 16px;
+                opacity: 1;
                 //  margin-bottom:8px;
             }
         }
 
         .tabs__slider {
-            border-top: 3px solid;
+            border-top-style: solid;
+            border-top-width: 3px;
         }
         /*.tabs__item--active {
             border-bottom: 2px solid @Class-Material;
