--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -15,7 +15,7 @@ body {
 }
 .application {
     font-family: 'Open Sans', sans-serif;
-    line-height: 1;
+    line-height: normal;
 }
 
 input[type="text"]:focus {
