Api add ask job book api.

--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -4,12 +4,12 @@
 }
 .dialog-choose {
     //background: #fff;
-    box-shadow: none;
-    height:80vh;
+    //box-shadow: none;
+    //height:80vh;
     //padding : 8px;
+    background-image: linear-gradient(328deg, #3293f6, #3023ae);
 
     .d-header {
-        background-image: linear-gradient(328deg, #3293f6, #3023ae);
         position: -webkit-sticky;
         position: sticky;
         top: 0px;
@@ -19,14 +19,15 @@
             height: 100%;
         }
 
-        h1{
+        h1 {
             font-size: 60px;
             font-weight: 300;
             line-height: 0.37;
             letter-spacing: -0.8px;
             color: white;
         }
-        h5{
+
+        h5 {
             margin-bottom: 0;
             font-size: 24px;
             font-weight: 600;
@@ -39,7 +40,6 @@
 
     .d-result {
         background: #fff;
-        
     }
 }
 
