--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -1,7 +1,9 @@
 ﻿@import "../../mixin.less";
-.settings.dialog__content.dialog__content__active{
+
+.settings.dialog__content.dialog__content__active {
     background-image: linear-gradient(328deg, #3293f6, #3023ae);
 }
+
 .dialog-choose {
     //background: #fff;
     //box-shadow: none;
@@ -10,41 +12,67 @@
     background-image: linear-gradient(328deg, #3293f6, #3023ae);
 
     .d-header {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0px;
-        z-index: 1;
-
         button {
             height: 100%;
         }
 
-        h1 {
-            font-size: 60px;
-            font-weight: 300;
-            line-height: 0.37;
-            letter-spacing: -0.8px;
-            color: white;
-        }
+        .title-text {
+            padding: 72px 0 24px 0;
 
-        h5 {
-            margin-bottom: 0;
-            font-size: 24px;
-            font-weight: 600;
-            line-height: 1.21;
-            letter-spacing: -0.5px;
-            //text-align: center;
-            color: white;
+            h1 {
+                font-size: 60px;
+                font-weight: 300;
+                color: white;
+                text-align: center;
+            }
+
+            h5 {
+                margin-bottom: 0;
+                font-size: 24px;
+                font-weight: 600;
+                line-height: 1.21;
+                letter-spacing: -0.5px;
+                //text-align: center;
+                color: white;
+            }
         }
     }
 
-    .d-result {
-        background: #fff;
+    .d-wrapper {
+        max-width: 784px;
+        margin: 0 auto;
+        max-height: 100vh;
+        height: 100%;
+
+        .loader {
+            height: auto;
+            position: absolute;
+            top: ~"calc(50% - 25px)";
+            right: ~"calc(50% - 25px)";
+            width: auto;
+        }
+
+        .results-container {
+            overflow-y: auto;
+
+            .uni {
+                width: 96px;
+                margin: 16px;
+                text-align: center;
+                color: #fff;
+                font-size: 12px;
+
+                img {
+                    width: 100%;
+                    height: 96px;
+                    background-color: white;
+                }
+            }
+        }
     }
 }
 
 .overlay {
-    
     //-webkit-backdrop-filter: blur(10px);
     //backdrop-filter: blur(10px);
     /*-moz-filter: blur(10px);
