--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -14,6 +14,9 @@
     .d-header {
         button {
             height: 100%;
+            svg{
+                fill: white;
+            }
         }
 
         .title-text {
@@ -55,6 +58,10 @@
         .results-container {
             overflow-y: auto;
 
+            .result {
+                flex-grow: 0;
+            }
+
             .uni {
                 width: 96px;
                 margin: 16px;
@@ -88,4 +95,22 @@
     &:after {
         filter: blur(20px);
     }
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #A8A8A8;
+    outline: 1px solid #A8A8A8;
+}
+
+::-webkit-scrollbar-track-piece {
+    background-color: @color-light-grey-2;
+    opacity: 0.5;
 }
