--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -11,6 +11,18 @@
     //padding : 8px;
     background-image: linear-gradient(328deg, #3293f6, #3023ae);
 
+    .navigation-buttons {
+        font-size: 22px;
+        font-weight: 600;
+
+        .sbf-arrow-button {
+            transform: rotate(-90deg);
+            color: white;
+            font-size: 10px;
+            margin-top: -7px;
+        }
+    }
+
     .d-header {
         button {
             height: 100%;
