Some design fixes.

--- a/Cloudents.Web/ClientApp/components/helpers/sortSwitch.less
+++ b/Cloudents.Web/ClientApp/components/helpers/sortSwitch.less
@@ -5,6 +5,7 @@
     border-radius: 4px;
     padding: 3px;
     margin-bottom: 16px;
+    text-transform: capitalize;
 
     input {
         display: none;
