--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -1,33 +1,6 @@
 ﻿@import "../../mixin.less";
-/*.loader {
-    .inTheMiddle();
-}*/
-/*.snack__content {
-    min-width: 98vw;
-    height: 55px;
-}*/
-
 .sec-result {
-    //max-width: 520px;
-    //TODO: need to do responsive
-    /*@cell-width: 504px;
-
-    max-width: 504px;
-
-    .cell {
-        background: #fff;
-        //width: @cell-width;
-        border-radius: 4px;
-    }
-
-    h5 {
-        font-weight: 600;
-        text-align: center;
-        //width: @cell-width;
-        color: @Spitball-Text;
-    }*/
     min-width: 0;
-
     .chip {
         background: #fff;
         color: @Spitball-Main-color;
@@ -64,9 +37,12 @@
     .full-height {
         height: 100%;
     }
+    .add-course {
+        svg {
+            fill: Spitball-Main-color;
+            width: 9px;
+            height: 9px;
+        }
+    }
 
-    /*.img-wrap .defaultImage svg {
-        width: 48px;
-        height: auto;
-    }*/
 }
