--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -1,48 +1,43 @@
 ﻿@import "../../mixin.less";
 .sec-result {
     min-width: 0;
-    .chip {
-        background: #fff;
-        color: @Spitball-Main-color;
-        border: 1px solid @Spitball-Main-color;
-        border-radius: 10px;
-        //letter-spacing: -0.3px;
-        //font-size: 12px;
-        text-transform: capitalize;
-        padding: 0 24px;
-        border-radius: 10px;
+    // .chip {
+    //     background: #fff;
+    //     color: @Spitball-Main-color;
+    //     border: 1px solid @Spitball-Main-color;
+    //     border-radius: 10px;
+    //     //letter-spacing: -0.3px;
+    //     //font-size: 12px;
+    //     text-transform: capitalize;
+    //     padding: 0 24px;
+    //     border-radius: 10px;
 
-        &.chip--selected {
-            color: #fff;
-            border: 0;
-            background: @Spitball-Main-color; //override
-        }
-    }
+    //     &.chip--selected {
+    //         color: #fff;
+    //         border: 0;
+    //         background: @Spitball-Main-color; //override
+    //     }
+    // }
 
-    .sub-search {
-        overflow: auto;
-        white-space: nowrap;
+    // .sub-search {
+    //     overflow: auto;
+    //     white-space: nowrap;
 
-        .chip {
-            border: solid 1px @Sub-Filter;
-            color: @Sub-Filter;
+    //     .chip {
+    //         border: solid 1px @Sub-Filter;
+    //         color: @Sub-Filter;
 
-            &.chip--selected {
-                background: @Sub-Filter;
-                color: #fff; //override
-            }
-        }
-    }
+    //         &.chip--selected {
+    //             background: @Sub-Filter;
+    //             color: #fff; //override
+    //         }
+    //     }
+    // }
 
     .full-height {
         height: 100%;
     }
-    .add-course {
-        svg {
-            fill: Spitball-Main-color;
-            width: 9px;
-            height: 9px;
-        }
-    }
+    
 
 }
+
