--- a/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/results/SortAndFilter.less
@@ -1,12 +1,13 @@
 @import "../../mixin.less";
 
-.sort-switch {
+﻿.sort-switch {
   background: linear-gradient(102deg, #3023ae, #3293f6);
   display: flex;
   align-items: stretch;
   border-radius: 4px;
   padding: 3px;
   margin-bottom: 16px;
+  text-transform: capitalize;
 
   input {
     display: none;
