fixed result page css

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -15,17 +15,17 @@
     //     padding-top: 30px;
     // }
 }
-
+.results-section {
+    margin: 0;
+}
 .sec-result {
     max-width: 504px;
+    margin-top: @heightOfTitle+4;
 
-    margin-top: @heightOfTitle;
     .cell {
         background: #fff;
         border-radius: 4px;
     }
-  
-    
 }
 @heightOfTitle : 22px;
 .sort-filter {
